# rust-blinky

./: Cargo.toml  Embed.toml  README.md  openocd.cfg
.cargo/: config.toml
interface/: stlink.cfg  stm32f4x.cfg
src/: main.rs
